# cookiecutter-django-tetra-poetry

./: .gitignore  LICENSE  README.md  cookiecutter.json  manage.py  package-lock.json  package.json  pyproject.toml
hooks/: post_gen_project.sh
templates/: base.html
yakb/: asgi.py  settings.py  urls.py  wsgi.py
{{cookiecutter.__project_slug}}/: .env  .pre-commit-config.yaml  manage.py  package.json  pyproject.toml
{{cookiecutter.__project_slug}}/templates/: base.html
{{cookiecutter.__project_slug}}/{{cookiecutter.__main_app_slug}}/: admin.py  apps.py  components.py  models.py  tests.py  views.py
{{cookiecutter.__project_slug}}/{{cookiecutter.__main_app_slug}}/templates/: home.html
{{cookiecutter.__project_slug}}/{{cookiecutter.__main_app_slug}}/templates/{{cookiecutter.__main_app_slug}}/: home.html
{{cookiecutter.__project_slug}}/{{cookiecutter.__project_slug}}/: asgi.py  settings.py  urls.py  wsgi.py
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  README.md  manage.py  package.json  pyproject.toml
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: asgi.py  settings.py  urls.py  wsgi.py
