[tool.poetry]
name = "yakb"
version = "0.1.0"
description = "Yet Another Knowledge Base"
authors = ["Matthias Roussel <matthias.roussel01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.1.8"
django-environ = "^0.10.0"
tetraframework = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
