[tool.poetry]
name = "yakb"
version = "0.1.0"
description = "Yet Another Knowledge Base"
authors = ["Matthias Roussel <matthias.roussel01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.1.8"
django-environ = "^0.10.0"
tetraframework = "^0.0.5"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pylint = "^2.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 119

[tool.pylint.main]
ignore = ["manage.py"]
ignore-patterns = ["^\\.#", "^.+\\.(json|toml|lock|sqlite3)$"]