[tool.poetry]
name = "{{cookiecutter.__project_slug}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_short_description}}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^{{cookiecutter.python_version}}"
django = "4.1.8"
django-environ = "^0.10.0"
tetraframework = "^0.0.5"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pylint = "^2.17.2"
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 119
exclude = ["manage.py"]


[tool.pylint.main]
ignore = ["manage.py"]
ignore-patterns = ["^\\.#", "^.+\\.(json|toml|lock|sqlite3)$"]
max-line-length = 119

[tool.pylint."messages control"]
disable = [
    "missing-module-docstring",
]
